8218854: FontMetrics.getMaxAdvance may be less than the maximum FontMetrics.charWidth

Consider algorithmic bold in FontMetrics.getMaxAdvance value and update obliqueness.

Reviewed-by: prr, serb